<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jboss.fuse.tnb</groupId>
	<artifactId>tnb-parent</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>common</module>
		<module>system-x</module>
		<module>fuse-products</module>
	</modules>

	<properties>
		<auto-service.version>1.0-rc7</auto-service.version>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<testcontainers.version>1.15.2</testcontainers.version>
		<xtf.version>0.21</xtf.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>cz.xtf</groupId>
				<artifactId>core</artifactId>
				<version>${xtf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
